--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.542.0",
     "mongoose": "^8.18.1",
-    "next": "15.5.2",
+    "next": "^15.5.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-timeago": "^8.3.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
